--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "url": "https://github.com/AnomalyInnovations/serverless-nodejs-starter.git"
   },
   "devDependencies": {
-    "serverless-bundle": "^1.2.5",
+    "serverless-bundle": "^1.8.0",
     "serverless-dotenv-plugin": "^2.1.1",
     "serverless-offline": "^5.3.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "aws-sdk": "^2.706.0"
+  }
 }
